# latex_telegram_bot

./: .gitignore  Cargo.toml  config.json  session_summary.md  ssh_key  ssh_key.pub
events/: polymarket_btc_events.json
src/: config.rs  data_fetcher.rs  fetch.rs  fetch_old.rs  latex_renderer.rs  lib.rs  main.rs  main_old.rs  telegram_sender.rs  ws.rs
templates/: template.aux  template.tex
