[package]
name = "latex_telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP clinet for Telegram API
reqwest = { version = "0.11", features = ["json", "multipart"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Templating engine (like Jinja2)
tera = "1.19"
# Date/time formatting
chrono = "0.4"
# Error handling
anyhow = "1.0"
# Environment variables
dotenvy = "0.15"
# File system utilities
tempfile = "3.8"
# PDF handling (optional, for validation)
pdf-extract = "0.7"
