[package]
name = "latex_telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP client for Telegram API
reqwest = { version = "0.11", features = ["blocking", "json"]}

# to fetch url
ureq = "2.9"

# nice JSON formatting
serde_json = "1.0"

# for UTC -> HST
chrono = "0.4"
chrono-tz = "0.8"

# for websocket-monitoring
tungstenite = { version = "0.20", features = ["native-tls"]}

# tokio for parallel processesing
tokio = { version = "1", features = ["full"] }

# join_all() function (core of parallelism) takes
# a Vec of async futures and runs them concurrently
futures = "0.3"

# for tg_send() helper - properly encodes the messeage text
# before putting it in URL
urlencoding = "2"